206-music-site2/css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/*** ----- GLOBAL Typography Styles  ***/

/* COLORS ========================================================
Dark Pink (Magenta): #b21e49;
Light Gray: #eeeeee;
Medium gray: #dddddd;
Slightly darker gray for border: #cfcacb;
Bright Pink: #ff1256;
Dark Grey: #222222;

Blue: #23a4cc;
==================================================================*/

body, html {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 16px;
  color: #222;
  background-color: #eee;
}

a {
  text-decoration: none;
  color: #222;
}

a:hover {
  font-weight: bold;
  color:#23a4cc;
}

p {
  font-size: 1em;
  line-height: 1.4;
}

h1, h2, h3, h4, label {
  font-weight: 700;
}

h1 {
  font-size: 2.4em;
  line-height: 1;
}

h2, label {
  font-size: 1.6em;
  line-height: 1.3;
  
}

h3 {
  font-size: 1em;
  text-transform: uppercase;
}

.logo {
  font-family: 'Sansita One', cursive;
  font-size: 2.7em;
  color: #fff;
  background: #222;
  text-align: center;  
  margin: 0;
  padding: 7%;
}

figure {
  margin: 0;
}

.btn {
  background-color: #ff1256;
  color: #fff;
  text-transform: uppercase;
  display: block;
  width: 100%;
  border: none;
  box-shadow: 2px 2px 0px #DADADA; 
  line-height: 2.4;
  margin: 2% 0;
}

.btn:hover {
  background-color: #b21e49;
}

.sidebar-btn {
  background-color: #b21e49;
  text-align: center;
  width: 100%;
  box-shadow: 2px 2px 0px #DADADA; 
  line-height: 2.8;
  margin: 2% 0;
}

.sidebar-btn:hover {
  background-color: #ff1256;
}

.sidebar-btn a {
  color: #fff;
  text-transform: uppercase;
}

#email {
  width: 98%;
  margin: 1% 0;
  line-height: 2.4;
  border: 2px solid #cfcacb;
}


/*** ------ Mobile Styles -- ***/

/*** header & nav styles for mobile ***/
main-header {
  width: 100%;
}

nav {
  width: 100%;
  background-color: #ddd;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav li {
  font-weight: 700;
  text-transform: uppercase;
  list-style: none;
  text-align: center;
  border-bottom: 2px solid #cfcacb;
  padding: 5% 0;
}

/*** main body styles for mobile ***/
main {
  width: 96%;
  margin: auto;
  padding: 0 2%;
}

section {
  width: 100%
}

article {
  width: 100%;
}

aside {
  width: 100%;
}

.sidebar-btn {
  width: 100%;
}

.upcoming, .faq {
  display: none;
}

.feed {
    width: 100%;
}
  
.feed-item {
  width: 100%;
}

.feed-img {
  width: 40%;
  float: left;
  margin: 0;
  padding: 0;
}

.feed-item-header {
  width: 60%;
  float: left;
  margin: 0;
  padding: 0;
}

.feed-content {
  display: none;
}

footer {
  width: 47.5%;
  margin: 0 auto;
}


/*** Detail Page Styles ***/

.author, .pub-date {
  display: inline-block;
}


/*** Reviews Index Styles ***/
.reviews-aside .newsletter {
  display: none;
}






/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}
/* ... */

